base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wangamy
  labels:
    app: wangamy
spec:
  type: NodePort
  selector:
    app: wangamy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
